; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_purge_arena.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_purge_arena.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_MASK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chunk_purge_arena(i32* %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i8*, i8** %6, align 8
  %14 = call i8* @CHUNK_ADDR2BASE(i8* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = icmp eq i8* %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* @PAGE_MASK, align 8
  %21 = and i64 %19, %20
  %22 = icmp eq i64 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i64, i64* %8, align 8
  %26 = icmp ne i64 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* @PAGE_MASK, align 8
  %31 = and i64 %29, %30
  %32 = icmp eq i64 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert(i32 %33)
  %35 = load i8*, i8** %6, align 8
  %36 = ptrtoint i8* %35 to i64
  %37 = load i64, i64* %7, align 8
  %38 = add i64 %36, %37
  %39 = inttoptr i64 %38 to i8*
  %40 = load i64, i64* %8, align 8
  %41 = call i32 @pages_purge(i8* %39, i64 %40)
  ret i32 %41
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @CHUNK_ADDR2BASE(i8*) #1

declare dso_local i32 @pages_purge(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
